force-app/main/default/objects/AcctSeed__Journal_Entry_Line__c/fields/Ramp_Id__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Id__c</fullName>
    <description>The Ramp transaction id (UUID) this line was built from. Use with RampTransactionAPI.getTransaction to retrieve the full Ramp transaction.</description>
    <externalId>true</externalId>
    <label>Ramp Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>