force-app/main/default/objects/AcctSeed__Journal_Entry_Line__c/fields/Ramp_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Ramp_User_Email__c</fullName>
    <description>The Ramp cardholder's email from the card transaction this line was built from. Populated on every Ramp-synced line regardless of whether the email matched a Salesforce User.</description>
    <label>Ramp User Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>