force-app/main/default/objects/AcctSeed__Journal_Entry_Line__c/fields/Ramp_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Vendor_Name__c</fullName>
    <description>The Ramp merchant name from the card transaction this line was built from. Populated on every Ramp-synced line regardless of whether the merchant matched a vendor Account.</description>
    <label>Ramp Vendor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>